Fix image alignment on mobile

--- a/sites/refracted/src/styles/ryoji.css
+++ b/sites/refracted/src/styles/ryoji.css
@@ -109,6 +109,7 @@ figure {
 
 figure:has(img){
     max-width: 300px;
+    width:100%;
     margin: auto 1.5rem;
     img {
         max-width: inherit;
